force-app/main/default/objects/PricebookEntry/fields/OptionUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OptionUnitPrice__c</fullName>
    <label>オプションリスト価格</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>