force-app/main/default/objects/PricebookEntry/fields/OvertimeRate__c.field-meta.xml
<CustomField>
    <fullName>OvertimeRate__c</fullName>
    <label>超過リスト価格</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>